# Quant_Trading_Agent_demo

./: .env.example  .gitignore  AGENT_IMPROVEMENTS.md  DEPLOYMENT_SUMMARY.md  FUNCTION_CALLING_ANALYSIS.md  GITHUB_DEPLOYMENT.md  GITHUB_DEPLOYMENT_GUIDE_CN.md  GITHUB_QUICK_START.md  GITHUB_UPLOAD_CHECKLIST.md  INTERVIEW_PREPARATION.md  LLM_AGENT_EVALUATION.md  LLM_DEMO_RESULTS.md  LLM_FEATURES_README.md  LLM_ORIGINAL_FEATURES.md  MODULE_MAPPING.md  PROJECT_DESCRIPTION.md  README.md  README_DEMO_RUN.md  README_LLM_DEMO.md  README_RESUME.md  RESUME_GUIDE.md  RL_GUIDE.md  TERMINOLOGY_EXPLANATION.md  check_git_status.ps1  demo.py  deploy_to_github.ps1  examples_different_symbols.py  examples_enhanced_agent.py  examples_llm_agent.py  examples_llm_original_features.py  examples_multi_agent.py  examples_rl_training.py  pyproject.toml  quick_demo.py  requirements.txt  resume_demo.py  setup.ps1  部署到GitHub_总结.md
app/: streamlit_app.py
docs/: ARCHITECTURE.md  EVAL.md  README.md  SHOWCASE_TRACE.md  UI_GUIDE.md  UPDATE_LOG.md
evalsets/: README.md  capability_v1.yaml  regression_v1.yaml  reliability_v1.yaml  retrieval_v1.yaml
scripts/: replay_trace.py  run_agent.py  run_dashboard.py  run_eval.py  run_harness.py  run_pilot_benchmark.py  run_reliability_eval.py  run_retrieval_eval.py  run_runtime_agent.py  run_showcase_trace.py  run_trace_analysis.py  test_sec_evidence.py  tune_agent.py
tests/: conftest.py  test_agent_pipeline.py  test_agents_analysis.py  test_backtester.py  test_checkpoint.py  test_context_packer.py  test_episodic_memory.py  test_eval_runner.py  (+18 more)
(+143 files in other folders)
