[project]
name = "quant-agent"
version = "0.1.0"
description = "A simple quant trading agent with data, strategy, and backtesting modules."
requires-python = ">=3.10"
dependencies = []

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]



