[project]
name = "quant-agent"
version = "0.1.0"
description = "A simple quant trading agent with data, strategy, and backtesting modules."
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.26.0",
    "pandas>=2.1.0",
    "yfinance>=0.2.30",
    "openbb>=4.0.0",
    "matplotlib>=3.8.0",
    "scikit-learn>=1.3.0",
    "pydantic>=2.6.0",
    "typer>=0.9.0",
    "loguru>=0.7.0",
    "gymnasium>=0.29.0",
    "stable-baselines3>=2.0.0",
    "openai>=1.0.0",
    "pyyaml>=6.0",
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
    "langchain-openai>=0.2.0",
    "langgraph-checkpoint-sqlite>=2.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]
ui = ["streamlit>=1.28.0"]
embedding = ["sentence-transformers>=3.0.0"]

[tool.pytest.ini_options]
markers = [
    "integration: live API tests (DeepSeek / SEC / network)",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]



